--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#38a3a5" />
     <meta
       name="description"
       content="Web site portfolio"
@@ -21,11 +21,17 @@
     <title>portfolio</title>
   </head>
   <body>
-    <noscript></noscript>
-    <div id="root">
+    <noscript>
       <h2>JavaScript is required for this website to function properly.</h2>
+          <!--
+          only when js is not displayed
+    -->
+  </noscript>
+    <div id="root">
+      
 
     </div>
+ 
     <!--
 
     -->
